<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Virtual Home</string>
    <string name="title_activity_main">Virtual Home</string>
    <string name="title_activity_augmented">augmented</string>

    <string name="text_testing_ar">Testing AR!</string>
    <string name="action_settings">Settings</string>
    <string name="action_editpreferences">Edit Preferences</string>
    <string name="action_chooseAnother">Choose Another</string>
    <string name="action_snapShot">Share Snapshot</string>
    <string name="action_snaptoscreen">Snap To Screen</string>


    <string name="button_name_startar">Start AR</string>
    <string name="title_activity_product_info">ProductInfo</string>

    <string name="product_name">Product Name: </string>

    <string name="dimension_string">Dimension: </string>
    <string name="price_string">Price: </string>
    <string name="description_string">Description: </string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_preferences">Preferences</string>


    <!-- Strings related to login -->

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string-array name="sextypelist">
        <item>@string/sex1</item>
        <item>@string/sex2</item>
    </string-array>


    <string name="sex1">Male</string>
    <string name="sex2">Female</string>

    <string name="family1">Single</string>
    <string name="family2">Family</string>
    <string name="family3">Family with boy kids</string>
    <string name="family4">Family with girl kids</string>

    <string name="sextype">Gender</string>
    <string name="prompt_sex">Enter Gender</string>



    <string name="hobby1">Gardening</string>
    <string name="hobby2">Interior Design</string>
    <string name="hobby3">Cooking</string>
    <string name="hobby4">Painting</string>
    <string name="hobby5">Reading</string>
    <string name="hobby6">Music</string>

    <string name="job1">IT field</string>
    <string name="job2">Educational</string>
    <string name="job3">Business</string>


    <string name="professiontitle">Profession details</string>
    <string name="hobbytitle">Choose interested hobbies</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_gallery__furniture">Gallery_Furniture</string>


    <string-array name="sofa_images">
        <item></item>
        <item>@drawable/sofa1_timsfors</item>
        <item>@drawable/sofa2_beddinge</item>
        <item>@drawable/sofa3_ektorp</item>
        <item>@drawable/sofa4_hawagia</item>
        <item>@drawable/sofa5_karlstad</item>
        <item>@drawable/sofa6_kivik</item>
        <item>@drawable/sofa7_nipprig</item>
        <item>@drawable/sofa8_knopparp</item>
        <item>@drawable/sofa9_dagarn</item>
        <item>@drawable/sofa10_stockholm</item>
        <item>@drawable/sofa11_stocksund</item>
        <item>@drawable/sofa12_knislinge</item>

    </string-array>




    <string-array name="sofanamelist">
        <item>TIMSFORS</item>
        <item>BEDDINGE</item>
        <item>EKTORP</item>
        <item>HAWAGIA</item>
        <item>KARLSTAD</item>
        <item>KIVIK</item>
        <item>NIPPRIG</item>
        <item>KNOPPARP</item>
        <item>DAGARN</item>
        <item>STOCKHOLM</item>
        <item>STOCKSUND</item>
        <item>KNISLINGE</item>
    </string-array>

    <string-array name="sofadescriptionlist">
        <item>Leather: Dyed through top-grain leather with a treated, embossed and pigmented surface.\n
            Key features
            - Soft, dyed-through 3/64" thick grain leather that is supple and smooth to the touch.
            - The outer surfaces are covered in a durable coated fabric with the same look and feel as leather. \n
            Dimensions:
            Seat width, chaise lounge: 28 3/8"
            Depth: 23 5/8" </item>
        <item>BEDDINGE ddd</item>
        <item>EKTORP ddd</item>
        <item>HAWAGIA dddd</item>
        <item>KARLSTAD dddd</item>
        <item>KIVIK dddd</item>
        <item>NIPPRIG dddd</item>
        <item>KNOPPARP dddd</item>
        <item>DAGARN ddddddd</item>
        <item>STOCKHOLM dddd</item>
        <item>STOCKSUND dddd</item>
        <item>KNISLINGE dddd</item>
    </string-array>


    <string name="title_activity_gallery__sofa1">Gallery_Sofa</string>
    <string name="title_activity_detail__image_display">Sofa Details</string>
    <string name="title_activity_sofa_gallery">SofaGallery</string>
    <string name="title_activity_product_view">ProductView</string>

    <string name="facebook_app_id">492864677558331</string>




</resources>